--- a/style.css
+++ b/style.css
@@ -94,6 +94,225 @@ span{
 button:hover span{
   width: 100%;
 }
-button:hover{
-  border: none;
+/* 
+button.first-btn {
+  background: #ffa31a;
+}
+
+button.first-btn:hover {
+  background: transparent;
+  color: #fff;
+} */
+
+
+.container {
+  background-color: #151515;
+  min-height: calc(100vh - 50px);
+  color: white;
+  
+}
+
+.rowdies-bold{
+
+  background: linear-gradient(to bottom,rgb(0, 0, 0), rgb(21, 21, 21)); 
+  padding: 50px; 
+  text-align: center;
+  color: white;
+  padding-left: 25px;
+}
+
+.featured-content {
+  height: 60vh;
+  padding: 50px;
+  background: 
+    linear-gradient(to top, rgba(0, 0, 0, 0), #151515),
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
+    url('deadpoolandwolverine.jpeg');
+}
+
+.featured-title {
+  width: 400px;
+  display: block;
+  margin: 0 auto; 
+}
+
+.featured-button {
+  width: 220px;
+  padding: 15px 0;
+  text-align: center;
+  margin: 28px auto;
+  border-radius: 25px;
+  font-weight: bold;
+  border: 2px solid #ffa31a;
+  background: transparent;
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  display: block; 
+}
+
+button.featured-button:hover {
+  background: #ffa31a;
+}
+
+
+.movie-list-container {
+  padding: 0 30px;
+}
+
+
+.movie-list {
+  display: flex;
+  align-items: center;
+  height: 350px;
+  transform: translateX(0);
+  transition: all 1s ease-in-out;
+}
+
+.movie-list-item {
+  margin-right: 33px;
+  position: relative;
+}
+
+.movie-list-item:hover .movie-list-item-img {
+  transform: scale(1.2);
+  margin: 0 30px;
+  opacity: 0.5;
+}
+
+.movie-list-item:hover .movie-list-item-title {
+  opacity: 1;
+}
+
+.movie-list-item-img {
+  transition: all 1s ease-in-out;
+  width: 170px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.movie-list-item-title {
+  background-color: transparent;
+  padding: 0 10px;
+  font-size: 20px;
+  font-weight: bold;
+  position: absolute;
+  top: 10%;
+  left: 28px;
+  opacity: 0;
+  transition: 1s all ease-in-out;
+}
+
+.movie-list-title {
+  text-align: left;
+}
+
+.rowdies-bold1 {
+  background: rgb(21, 21, 21);
+  padding: 50px; 
+  text-align: center;
+  color: white;
+  padding-left: 25px;
+}
+
+.featured-content2 {
+  height: 60vh;
+  padding: 50px;
+  background: 
+    linear-gradient(to top, rgba(0, 0, 0, 0), #151515),
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
+    url('tvshow.webp');
+}
+
+.featured-content3 {
+  height: 60vh;
+  padding: 50px;
+  background: 
+    linear-gradient(to top, rgba(0, 0, 0, 0), #151515),
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
+    url('doc.jpeg');
+}
+
+.featured-content4 {
+  height: 60vh;
+  padding: 50px;
+  background: 
+    linear-gradient(to top, rgba(0, 0, 0, 0), #151515),
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
+    url('anime.jpg');
+}
+
+footer{
+  background-color: #111;
+}
+.footerContainer{
+  width: 100%;
+  padding: 70px 30px 20px ;
+}
+.socialIcons{
+  display: flex;
+  justify-content: center;
+}
+.socialIcons a{
+  text-decoration: none;
+  padding:  10px;
+  background-color: white;
+  margin: 10px;
+  border-radius: 50%;
+}
+.socialIcons a i{
+  font-size: 2em;
+  color: black;
+  opacity: 0,9;
+}
+
+.socialIcons a:hover{
+  background-color: #111;
+  transition: 0.5s;
+}
+.socialIcons a:hover i{
+  color: white;
+  transition: 0.5s;
+}
+.footerNav{
+  margin: 30px 0;
+}
+.footerNav ul{
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+}
+.footerNav ul li a{
+  color:white;
+  margin: 20px;
+  text-decoration: none;
+  font-size: 1.3em;
+  opacity: 0.7;
+  transition: 0.5s;
+
+}
+.footerNav ul li a:hover{
+  opacity: 1;
+}
+.footerBottom{
+  background-color: #000;
+  padding: 20px;
+  text-align: center;
+}
+.footerBottom p{
+  color: white;
+}
+.designer{
+  opacity: 0.7;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin: 0px 5px;
+}
+@media only screen and (max-width: 940px){
+  .menu-container{
+      display: none;
+  }
 }
